//package com.example.Backend.DTOs.Process;
//
//import lombok.Data;
//
//@Data
//public class FiberDyeRequest {
//    private Long orderId;
//    private Long fiberColorId;
//    private Long fiberOutColorId;
//    private Long processId;
//    private double roughWeight;
//    private double baleWeight;
//    private double conWeight;
//    private double moisture;
//}
