@startuml

class Order {
    Long id
    double weight
    LocalDate orderDate
    Customer customer
    FiberType fiberType
    FiberColor color
    List<FactoryProcess> factoryProcesses

    void addFactoryProcess(FactoryProcess process)
    void removeFactoryProcess(FactoryProcess process)
    static List<Order> getAllOrders()
    static Order createOrder(OrderRequest orderRequest)
    static Order getOrderById(Long orderId)
}

class ProcessDye {
    Long id
    double available_weight
    double total_weight
    ProcessStatus status
    LocalDateTime dateStart
    LocalDateTime dateEnd
    Order order

    void startProcess()
    void completeProcess()
}

class FiberColor {
    Long id
    String name
    String name_en
}

class FiberDye {
    Long id
    LocalDateTime dateTime
    double rough_weight
    double bale_weight
    double con_weight
    double moisture
    int baleNum
    Order order
    ProcessDye processDye
    FiberColor color
    FiberColor out_color

    void dyeFiber()
}

class FiberDyeRequest {
    Long orderId
    Long processId
    Long fiberColorId
    Long fiberOutColorId
    double roughWeight
    double baleWeight
    double conWeight
    double moisture
}

class FiberDyeResponse {
    Long id
    LocalDateTime dateTime
    double rough_weight
    double bale_weight
    double con_weight
    double moisture
    int baleNum
    Order order
    ProcessDye processDye
    FiberColor color
    FiberColor out_color
}

class FiberReceive {
    Long id
    LocalDateTime dateTime
    double rough_weight
    double bale_weight
    double con_weight
    double moisture
    int baleNum
    Order order
    FiberColor color

    void receiveFiber()
}

class ProcessReceive {
    Long id
    double available_weight
    double total_weight
    ProcessStatus status
    LocalDateTime dateStart
    LocalDateTime dateEnd
    Order order
    List<FiberReceive> fiberReceives

    void startProcess()
    void completeProcess()
}

'class ServiceException extends Exception {
'    ErrorResponse errorResponse
'}
'
'enum ErrorResponse {
'    NO_ORDER
'    NO_PROCESS_RECEIVE
'    NO_FIBER_COLOR
'    EXCEEDS_WEIGHT
'    EXCEEDS_AVAILABLE_WEIGHT
'    NO_CONTENT
'}

enum ProcessStatus {
    NEW
    PENDING
    IN_PROGRESS
    COMPLETED
}

class Customer {
    Long id
    String name
    String address
    String email
    String phoneNumber

    void placeOrder(Order order)
}

class FiberType {
    Long id
    String name
    String description
}

class FactoryProcess {
    Long id
    String name
    String name_en
    String description
    String outputs
    String outputs_en

    void executeProcess()
}

Order "1" --> "*" FiberDye : агуулдаг
ProcessDye "1" --> "*" FiberDye : агуулдаг
FiberColor "1" --> "*" FiberDye : ашигладаг
FiberDyeRequest "1" --> "1" Order : лавлах
FiberDyeRequest "1" --> "1" ProcessDye : лавлах
FiberDyeRequest "1" --> "1" FiberColor : лавлах
FiberDyeResponse "1" --> "1" Order : лавлах
FiberDyeResponse "1" --> "1" ProcessDye : лавлах
FiberDyeResponse "1" --> "1" FiberColor : лавлах
'ServiceException "1" --> "1" ErrorResponse : агуулдаг
'Order "1" --> "1" Customer :хамаардаг
Order "1" --> "1" FiberType : ашигладаг
Order "1" --> "1" FiberColor : агуулдаг
Customer "1" --> "*" Order : захиалдаг
FiberType "1" --> "*" Order : ашигладаг
FiberColor "1" --> "*" Order : ашигладаг
FiberDye "1" --> "1" FiberColor : ашигладаг
FiberDye "1" --> "1" FiberType : ашигладаг
Order "1" --> "*" FiberReceive : агуулдаг
FiberReceive "1" --> "1" FiberColor : ашигладаг
Order "1" --> "*" ProcessReceive : агуулдаг
ProcessReceive "1" --> "*" FiberReceive : агуулдаг
Order "1" --> "*" FactoryProcess : агуулдаг

@enduml